Add click counter

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <!-- Forest Cat -->
    <div class="text-center">
-        <img src="static/img/forest%20cat.jpg" alt="Norwegian forest cat and fox">
-        <p class="click-counter">Number of Clicks:</p>
+        <img class="cat-click" src="static/img/forest%20cat.jpg" alt="Norwegian forest cat and fox">
+        <p class="click-counter"></p>
    </div>
 
 
